security opt apparmor unconfirmed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     image: mongo:7.0
     container_name: triage-mongo
     security_opt:
-      - seccomp=unconfined
+      - apparmor=unconfined
     restart: unless-stopped
     ports:
       - "27018:27017"
